Update README.md: Getting Started & Usage